# lblimg2coords

./: .gitignore  LICENSE  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml
src/lblimg2coord/: __init__.py
src/lblimg2coords/: convert.py
