[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
install_requires = 
    opencv-python==4.8.1.78
    tqdm==4.66.5
    numpy==1.24.0
python_requires = >=3.8

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[flake8]
max-line-length = 160
exclude = __init__.py